# sqlite-rust-java-bench

./: .gitignore  README.md  article.md
.cargo/: config.toml
docs/: benchmark-notes.md
java/: build.gradle.kts  settings.gradle.kts
java/src/main/java/bench/: App.java
java/src/test/java/bench/: AppTest.java
rust/: Cargo.toml
rust/src/: main.rs
scripts/: run-sqlite-investigation-matrix.sh  test-runner-portability.sh
