[package]
name = "sqlite-build-flags-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }


    [profile.release]
    lto = "fat"
    codegen-units = 1
    panic = "abort"
    